# crypto

./: .env.sample  README.md  binance_python_api.ipynb  pyproject.toml
src/crypto/: crew.py  main.py
src/crypto/config/: agents.yaml  tasks.yaml
src/crypto/tools/: custom_tool.py
